# scCisInt

./: .gitignore  LICENSE  README.md
ConsensusNMF/: 1_run_NMF_bp_multiple_init.sh  2_run_make_consensus_matrix.sh  3_run_consensus_nmf.sh  4_run_make_pseudobulk_matrix.sh  README.md  makeConsensusMatrix.m  make_pseudobulk_matrix.R  run_NMF_bp_multiple_init.sh  run_consensus_nmf.sh  run_makeConsensusMatrix.sh  run_make_consensus_matrix.sh  run_make_pseudobulk_matrix.sh
ConsensusNMF/example/example_in/: 10x_barcode_plus_celltype.txt  chr6_bins.txt  goodgenes_common.txt  subsampled_cells.txt
NMF/: README.md  nmf.m  nnlsm_blockpivot.m  run_nmf.m
NMF/nmf_sparse_bp/: .gitignore  CMakeLists.txt  README.md  run_example.sh  run_nmf.cpp  run_nmf_bp  run_pbmc_example.sh
NMF/nmf_sparse_bp/modules/: initialization.cpp  initialization.h  io.cpp  io.h  nmf.cpp  nmf.h  nnlsm_blockpivot.cpp  nnlsm_blockpivot.h  utils.cpp  utils.h
NMF/nmf_sparse_bp/modules/random_svd/: low_rank_svd_algorithms_gsl.c  low_rank_svd_algorithms_gsl.h  matrix_vector_functions_gsl.c  matrix_vector_functions_gsl.h
scCisInt/: README.md  run_scATAC_EPpredict_stability_RF.sh  scATAC_EPpredict_mergePred.R  scCisInt_aux_functions.R  scCisInt_postprocessing_combine_all_predictions.R  scCisInt_postprocessing_enhancer_scores.r  scCisInt_postprocessing_integrate_aux_data.r  scCisInt_postprocessing_kmeans.R  scCisInt_predict.m  scCisInt_preprocessing_prep_data_by_gene.R  scCisInt_preprocessing_prep_data_by_region.R
scCisInt/example/example_in/: Mus_musculus.GRCm38.74.TSS_trans2gene2bin_morebins_chr6.txt  (+1 more)
(+143 files in other folders)
